# Tactile-Sevice-Robot-Mobility-Assistance

./: LICENSE  README.md
pinocchio_sim_ws/.catkin_tools/cache/: workspace_packages
pinocchio_sim_ws/.catkin_tools/profiles/default/: devel_collisions.txt
pinocchio_sim_ws/devel/: .catkin  .rosinstall  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
pinocchio_sim_ws/devel/.private/catkin_tools_prebuild/: .catkin  setup.sh
pinocchio_sim_ws/devel/.private/dual_arm/: .catkin  setup.sh
pinocchio_sim_ws/devel/.private/optimal_traj/: .catkin  .rosinstall
pinocchio_sim_ws/devel/.private/tactile_compliance/: .catkin  local_setup.sh  setup.sh
pinocchio_sim_ws/devel/.private/util_msgs/: .catkin  .rosinstall  setup.sh
pinocchio_sim_ws/devel/include/util_msgs/: trajectory.h
pinocchio_sim_ws/devel/lib/optimal_traj/: trajectory
pinocchio_sim_ws/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  dual_arm.pc  optimal_traj.pc  util_msgs.pc
pinocchio_sim_ws/logs/optimal_traj/: build.cmake.000.log.stderr
pinocchio_sim_ws/logs/tactile_compliance/: build.cmake.000.log.stderr
pinocchio_sim_ws/logs/util_msgs/: build.make.000.log.stderr
pinocchio_sim_ws/src/dual_arm/: CMakeLists.txt  package.xml
pinocchio_sim_ws/src/dual_arm/config/: control.yaml  dual_arm.rviz  dual_arm.yaml  joint_state_controller.yaml
pinocchio_sim_ws/src/dual_arm/launch/: gazebo.launch  try.launch
pinocchio_sim_ws/src/matlab_sim/: tactile_jacobian.m
pinocchio_sim_ws/src/matlab_sim/centroidal_model/: README.md  Untitled2.m  Untitled4.m  centroidalDynamics.m  centroidalNMPC.m  generateReference.m  generate_cross_matrix.m  getR.m  getfoot.m  main.m
pinocchio_sim_ws/src/matlab_sim/tactile_CBF/: discretePID.m  forward_critical_point.m  forward_kinematics.m  get_cri_jacobian.m  getf.m  main_rotate_HQP.m  mianwithstruct.m  plotfig.m  prindex.m  test.m  untitled.m
pinocchio_sim_ws/src/optimal_traj/: CMakeLists.txt  package.xml
pinocchio_sim_ws/src/optimal_traj/doc/: install.md
pinocchio_sim_ws/src/optimal_traj/include/optimal_traj/: Trajectory.hpp
pinocchio_sim_ws/src/optimal_traj/scripts/: interactive_marker.py
pinocchio_sim_ws/src/optimal_traj/src/: OptimalTrajectoryNode.cpp  Trajectory.cpp
pinocchio_sim_ws/src/realsense/: CMakeLists.txt  README.md  package.xml
pinocchio_sim_ws/src/tactile_compliance/: CMakeLists.txt
pinocchio_sim_ws/src/tactile_compliance/config/: forearm_cells.yaml  initial_params.yaml
pinocchio_sim_ws/src/tactile_compliance/include/tactile_compliance/: CollisionConstraint.hpp  CriticalPoint.hpp  MainController.hpp  TactileCompliance.hpp  Utils.hpp
pinocchio_sim_ws/src/tactile_compliance/launch/: dynamics.launch
pinocchio_sim_ws/src/tactile_compliance/src/: CollisionConstraint.cpp  CriticalPoint.cpp  MainController.cpp  TactileCompliance.cpp  init.cpp
pinocchio_sim_ws/src/util_msgs/: CMakeLists.txt  package.xml
(+50 files in other folders)
